added meta viewport

--- a/stylesheets/projects.css
+++ b/stylesheets/projects.css
@@ -1,5 +1,5 @@
 #top {
-  background-image: url(../Images/red_sunset.svg);
+  background-image: url(../images/red_sunset.svg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
