--- a/stylesheets/projects.css
+++ b/stylesheets/projects.css
@@ -45,7 +45,7 @@ canvas {
   background-image: url(../images/editor.svg);
   background-repeat: no-repeat;
   background-position: center;
-
+  background-size: contain;
   margin: auto;
   width: 616px;
   height: 424px;
