--- a/stylesheets/projects.css
+++ b/stylesheets/projects.css
@@ -46,6 +46,7 @@ canvas {
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
+  overflow: hidden;
   margin: auto;
   width: 616px;
   height: 424px;
