--- a/stylesheets/projects.css
+++ b/stylesheets/projects.css
@@ -1,3 +1,4 @@
+
 #top {
   background-image: url(../images/red_sunset.svg);
   background-repeat: no-repeat;
@@ -41,14 +42,14 @@ canvas {
 }
 
 .editor-picture {
-  position: relative;
+
   background-image: url(../images/editor.svg);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: contain;
-  overflow: hidden;
+  background-size: cover;
   margin: auto;
   width: 616px;
+  max-width: 100%;
   height: 424px;
 }
 #thiswebsite {
