--- a/stylesheets/projects.css
+++ b/stylesheets/projects.css
@@ -1,11 +1,14 @@
 h2 {
-  font-family: 'Quando', serif;
+  /*font-family: 'Quando', serif;*/
+  font-family: 'Shrikhand', cursive;
 }
 h3 {
-  font-family: 'Judson', serif;
+ /* font-family: 'Judson', serif;*/
+ font-family: 'Sansita', sans-serif;
 }
 p {
-  font-family: 'Montserrat', sans-serif;
+/*  font-family: 'Montserrat', sans-serif;*/
+font-family: 'Scope One', serif;
 }
 #top {
   background-image: url(../images/red_sunset.svg);
