changed projects.html navbar color

--- a/stylesheets/navbar.css
+++ b/stylesheets/navbar.css
@@ -19,7 +19,7 @@
 }
 .headroom--top {
   color: #FFF;
-  background-color: #FBC761;
+  background-color: #FFC56C;
   text-align: center;
   padding-top: 30px;
   padding-bottom: 40px; 
