--- a/stylesheets/projects.css
+++ b/stylesheets/projects.css
@@ -14,6 +14,10 @@ canvas {
   padding-left: 100px;
 }
 /* Projects CSS settings */
+.headroom--top {
+  background-color: #C33731;
+  opacity: 0.85; 
+}
 #top {
   background-image: url(../images/red_sunset.svg);
   background-repeat: no-repeat;
